# ChangeLog for dev-python/astral
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  30 Mar 2011; James Rowe <jnrowe@gmail.com> astral-0.5.ebuild:
  Keyworded amd64.

  21 Mar 2011; James Rowe <jnrowe@gmail.com> -astral-0.3.ebuild,
  astral-0.4.ebuild:
  Keyworded x86.

  21 Mar 2011; James Rowe <jnrowe@gmail.com> astral-0.4.ebuild:
  Keyworded amd64.

*astral-0.5 (28 Feb 2011)

  28 Feb 2011; James Rowe <jnrowe@gmail.com> +astral-0.5.ebuild:
  Version bump [297].

*astral-0.4 (15 Feb 2011)

  15 Feb 2011; James Rowe <jnrowe@gmail.com> +astral-0.4.ebuild:
  Version bump [274].

  12 Jan 2011; James Rowe <jnrowe@gmail.com> +watch:
  Added watch file for package updates.

  12 Oct 2010; James Rowe <jnrowe@gmail.com> astral-0.3.ebuild:
  Fixed duplicated test dependencies, caused by now fixed bug in paralax.

  28 Aug 2010; James Rowe <jnrowe@gmail.com> -astral-0.2.ebuild,
  astral-0.3.ebuild:
  Keyworded x86.

  28 Aug 2010; James Rowe <jnrowe@gmail.com> astral-0.3.ebuild:
  Keyworded amd64.

*astral-0.3 (29 Jul 2010)

  29 Jul 2010; James Rowe <jnrowe@gmail.com> +astral-0.3.ebuild:
  Version bump [d8d].

  04 May 2010; James Rowe <jnrowe@gmail.com> -astral-0.1.ebuild,
  astral-0.2.ebuild:
  Keyworded x86.

  04 May 2010; James Rowe <jnrowe@gmail.com> astral-0.2.ebuild:
  Keyworded amd64.

*astral-0.2 (04 Apr 2010)

  04 Apr 2010; James Rowe <jnrowe@gmail.com> +astral-0.2.ebuild:
  Version bump.

  21 Mar 2010; James Rowe <jnrowe@gmail.com> astral-0.1.ebuild:
  Use DISTUTILS_SRC_TEST instead of directly calling nosetests.

  21 Mar 2010; James Rowe <jnrowe@gmail.com> astral-0.1.ebuild:
  Added PYTHON_DEPEND setting.

  14 Feb 2010; James Rowe <jnrowe@gmail.com> astral-0.1.ebuild:
  Incompatible with python 3.x.

  12 Dec 2009; James Rowe <jnrowe@gmail.com> astral-0.1.ebuild:
  Updated homepage.

  12 Nov 2009; James Rowe <jnrowe@gmail.com> astral-0.1.ebuild:
  Switched to EAPI 2.
