@@ -4,24 +4,22 @@ Hash: SHA1
 - -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-DIST astral-0.4.zip 82505 RMD160 dd0133096ae35a7cf32d92ff259c60f69110b8be SHA1 7e0b557ab9e5d502f2d71e90839e3a70f2e0dee2 SHA256 9155c7520b4f64eefc97459dd3cf6d5415d5c41153e5f7968ef242b8ad7a148e
 DIST astral-0.5.zip 173893 RMD160 ccfa92669140453568f9db9154dc87a48df5d6fc SHA1 b9aa6e30492ef11b68b10510921211cee267d1c6 SHA256 f248a9298963a8873acefe14b334a5933d1fd9f3caee1c6a61a588cedec48d6b
-EBUILD astral-0.4.ebuild 695 RMD160 569f54eebb0f21a88289296953109a5e46ee967a SHA1 8be30ad52570ea46b9a6e481213f771f24834ebf SHA256 5aad32d38beb346b178d843f88438157f3666ab15162b7d4b00da6485a4dbd33
-EBUILD astral-0.5.ebuild 617 RMD160 6c91eaf29819cc89e7d66dc820cda8737c88bd21 SHA1 692cf490ee07d614b8b499f2551ae15c2d33049f SHA256 2550cbb46b4e45af743fd6b7badb9448bd3b824fbffcee53a2a29d5c35c5c242
-MISC ChangeLog 2405 RMD160 027437582245097fe102a8604cd79f41da79a70c SHA1 4ce8c317c66778394ece58c67da0ed4a4a484205 SHA256 af61fd7a9f00c23d85968b1a37458b9438ef5fdb535fbebf8de63eb185f848a9
+EBUILD astral-0.5.ebuild 616 RMD160 699a9db59aad5cd6681ae797b60db5f0a19f1930 SHA1 5bdcad2a72c7763ee591aa4ccdae8c1824037ef7 SHA256 6e179794da4c84790c1ffa78e230181fc31a42cecf5c4e07a26ad2a6a63df898
+MISC ChangeLog 2509 RMD160 fb0ddba73c072052eb4dbc80d50d5bd4768a060a SHA1 34234a7397b3c3b530e2aeffa45b26251cab95b3 SHA256 8fb3b50ed41a0446db0fe4d7f476da181c55c39f3ac91db38931ef79ffaeaf7d
 MISC metadata.xml 706 RMD160 3a0a734d00cbfeb2018943e10b8f5eafabf8affc SHA1 9dba7069bf6cd0bae59f1cd91de0529d1d0f8d3f SHA256 0e904813139ed58daa443acaaca5928746fd1885647f69aa77ebf40a0878aefa
 MISC watch 29 RMD160 b03b6eb26548da02260759d90800080b75d58e37 SHA1 ab2588c2ce9c4a56b78f2596131515adc5117f17 SHA256 cd6e0156edd842dc60b6e9c9652cd846e80c2ecd5db34212470e012a3f8c94a2
 - -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk2TAsMACgkQzJrj3cAXR0lTIACgm6qxeezGzRxMLUMNhLyixLbf
-w0UAn0JwI+GWvIyWZfU0PrVNSnU3AU9p
-=iyWD
+iEYEARECAAYFAk2TBnEACgkQzJrj3cAXR0nwkwCdFdmK6NVK+vAc801v8LBh8syx
+eDUAoJSMlFqye0xrTKaKmdY1hm8skX6P
+=q9ek
 - -----END PGP SIGNATURE-----
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk2TAyEACgkQzJrj3cAXR0kcswCfVoNFSt1rPRlRorGYUODIcvCy
-LW4An3raK7khmRFvZYy53qqQ8ZJoE+23
-=sOox
+iEYEARECAAYFAk2TBsYACgkQzJrj3cAXR0ngBQCgvOmPzqjDGZfLXX5lmK2rE4xa
+lOwAn10CVd1LDcdREUshKvgGYS7mXitE
+=xvOM
 -----END PGP SIGNATURE-----
