@@ -15,7 +15,7 @@ DESCRIPTION="Calculations for the position of the sun and moon"
 
 LICENSE="Apache-2.0"
 SLOT="0"
-KEYWORDS="amd64 ~x86"
+KEYWORDS="amd64 x86"
 IUSE="test"
 
 DEPEND=""
