@@ -1,22 +1,0 @@
->=app-admin/eselect-python-20091230 =dev-lang/python-2* test? ( dev-python/nose )
-dev-python/pytz >=app-admin/eselect-python-20091230 =dev-lang/python-2*
-0
-http://www.sffjunkie.co.uk/files/python/astral-0.4.zip
-
-http://www.sffjunkie.co.uk/python-astral.html
-Apache-2.0
-Calculations for the position of the sun
-amd64 x86
-distutils multilib python toolchain-funcs
-test test
-
-
-
-3
-
-compile install postinst postrm prepare test
-
-
-
-
-
