@@ -6,7 +6,7 @@ mirror://pypi/a/astral/astral-0.5.zip
 http://pypi.python.org/pypi/astral/
 Apache-2.0
 Calculations for the position of the sun and moon
-amd64 ~x86
+amd64 x86
 distutils eutils jnrowe-pypi multilib portability python toolchain-funcs
 test test
 
