@@ -1,4 +1,3 @@
-* dev-python/astral-0.5                      x86 SCHEDULED: <2011-03-30 Wed>
 * dev-python/lettuce-0.1.21                amd64 SCHEDULED: <2011-03-31 Thu>
 * dev-python/lettuce-0.1.21                  x86 SCHEDULED: <2011-03-31 Thu>
 * www-client/cupage-0.5.4                  amd64 SCHEDULED: <2011-03-31 Thu>
