@@ -2,6 +2,10 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  30 Mar 2011; James Rowe <jnrowe@gmail.com> -astral-0.4.ebuild,
+  astral-0.5.ebuild:
+  Keyworded x86.
+
   30 Mar 2011; James Rowe <jnrowe@gmail.com> astral-0.5.ebuild:
   Keyworded amd64.
 
